--- a/sequence/bert_ner/bert_ce_config.yml
+++ b/sequence/bert_ner/bert_ce_config.yml
@@ -15,6 +15,7 @@ project:
 pretrained_models:
   name: 'bert_base_chinese'
   dir: '{home.dir}\common\pretrained_models\{pretrained_models.name}'
+  full_finetuning: True
   is_use: False
 
 data:
@@ -38,10 +39,8 @@ data:
   batch_size: 32
   batch_first: True
 
-  train_batch_size: 64
   train_shuffle: True
 
-  test_batch_size: 10
   test_shuffle: False
 
 # specified for specific module
@@ -70,7 +69,7 @@ learn:
   dropout_rate: 0.1
   learning_rate: 1.0e-4
   momentum: 0.9
-  weight_decay: 1.0e-5
+  weight_decay: 1.0e-2
   batch_display: 20
   episode: 100
   dir:
