--- a/sequence/bert_ner/bert_ce_config.yml
+++ b/sequence/bert_ner/bert_ce_config.yml
@@ -15,7 +15,7 @@ project:
   seed: 19980603
 
 pretrained_models:
-  name: 'chinese'
+  name: 'bert_base_chinese'
   dir: '{home.dir}//common//pretrained_models//{pretrained_models.name}'
   full_finetuning: True
   is_use: False
