--- a/sequence/intention_classification/intention_classification_config.yml
+++ b/sequence/intention_classification/intention_classification_config.yml
@@ -1,7 +1,7 @@
 # shared for multiple projects in this machine, raw data, read only
 
 home:
-  dir: 'D://workspace'
+  dir: 'D:/workspace'
 #  dir: '//home//admin//jupyter//workspace'
 
 device: 'cpu'
@@ -11,7 +11,7 @@ device: 'cpu'
 project:
   name: 'email'
   dir:
-    work: '{home.dir}//{project.name}'
+    work: '{home.dir}/{project.name}'
   seed: 19980603
 
 pretrained_models:
@@ -55,7 +55,7 @@ model:
   bidirectional: True
   batch_first: False
   nlayer: 1
-  lr: 1.0e-4
+  lr: 5.0e-5
   hidden_dropout_prob: 0.5
   is_pretrained_model: True
   label_pad: False
@@ -76,11 +76,11 @@ learn:
   momentum: 0.9
   weight_decay: 1.0e-2
   batch_display: 20
-  episode: 20
+  episode: 10
   dir:
-    work: "{project.dir.work}////{model.name}"
-    log: '{learn.dir.work}//log'
-    data: "{learn.dir.work}//data"
-    saved: '{learn.dir.work}//saved'
-    result: '{learn.dir.work}//result//result.xlsx'
-    summary: '{learn.dir.work}//summary'
+    work: "{project.dir.work}/{model.name}"
+    log: '{learn.dir.work}/log/'
+    data: "{learn.dir.work}/data/"
+    saved: '{learn.dir.work}/saved/'
+    result: '{learn.dir.work}/result/result.xlsx'
+    summary: '{learn.dir.work}/summary/'
