--- a/sequence/text_similarity/text_similarity_config.yml
+++ b/sequence/text_similarity/text_similarity_config.yml
@@ -21,12 +21,12 @@ pretrained_models:
   is_use: False
 
 data:
-  name: 'email'
+  name: 'simi'
   base_dir: '{home.dir}//data'
-  ori_path: '{data.base_dir}//{data.name}//classification.xlsx'
-  train_path: '{data.base_dir}//{data.name}//classification_train.xlsx'
-  valid_path: '{data.base_dir}//{data.name}//classification_valid.xlsx'
-  test_path: '{data.base_dir}//{data.name}//classification_valid.xlsx'
+  ori_path: '{data.base_dir}//email//classification.xlsx'
+  train_path: '{data.base_dir}//{data.name}//train.tsv'
+  valid_path: '{data.base_dir}//{data.name}//dev.tsv'
+  test_path: '{data.base_dir}//{data.name}//dev.tsv'
 
   vocab_path: '{pretrained_models.dir}//vocab.txt'
 
@@ -55,7 +55,7 @@ model:
   bidirectional: True
   batch_first: False
   nlayer: 1
-  lr: 5.0e-4
+  lr: 1.0e-5
   hidden_dropout_prob: 0.5
   is_pretrained_model: True
   label_pad: False
