--- a/sequence/text_similarity/text_similarity_config.yml
+++ b/sequence/text_similarity/text_similarity_config.yml
@@ -9,7 +9,7 @@ device: 'cpu'
 
 # Shared for multiple modules in the project
 project:
-  name: 'email'
+  name: 'simi_new'
   dir:
     work: '{home.dir}/{project.name}'
   seed: 19980603
@@ -21,7 +21,7 @@ pretrained_models:
   is_use: False
 
 data:
-  name: 'simi'
+  name: 'simi_new'
   base_dir: '{home.dir}//data'
   ori_path: '{data.base_dir}//email//classification.xlsx'
   train_path: '{data.base_dir}//{data.name}//train.tsv'
@@ -39,7 +39,7 @@ data:
 
   num_vocab: 20000
   num_tag: 8
-  batch_size: 4
+  batch_size: 8
   batch_first: True
 
   train_shuffle: True
@@ -55,7 +55,7 @@ model:
   bidirectional: True
   batch_first: False
   nlayer: 1
-  lr: 1.0e-5
+  lr: 1.0e-4
   hidden_dropout_prob: 0.5
   is_pretrained_model: True
   label_pad: False
