--- a/sequence/ok_nok_weight/config.yml
+++ b/sequence/ok_nok_weight/config.yml
@@ -1,35 +1,33 @@
 # shared for multiple projects in this machine, raw data, read only
 
 home:
-#  dir: 'C://workspace'
-  dir: '/workspace/xingpengju_workspace/workspace'
+  dir: 'D://workspace'
+#  dir: '//home//admin//jupyter//workspace'
 
 #device: 'cpu'
 device: 'cuda:0'
 
 # Shared for multiple modules in the project
 project:
-  name: 'bert_ner'
+  name: 'ok_nok'
   dir:
-    work: '{home.dir}/{project.name}'
+    work: '{home.dir}//{project.name}'
   seed: 19980603
 
 pretrained_models:
-  name: 'bert_base_chinese'
-  dir: '{home.dir}/common/pretrained_models/{pretrained_models.name}'
+  name: 'linear_softmax'
+  dir: '{home.dir}//common//pretrained_models//{pretrained_models.name}'
   full_finetuning: True
   is_use: False
 
 data:
-  name: 'qirui/defect/v2'
-  base_dir: '{home.dir}/data'
-  train_path: '{data.base_dir}/{data.name}/train.conll'
-  valid_path: '{data.base_dir}/{data.name}/valid.conll'
-  test_path: '{data.base_dir}/{data.name}/test.conll'
-  test_result_save_path : '{data.base_dir}/{data.name}/valid_clean.xlsx'
-#  test_result_save_path : '{data.base_dir}/{data.name}/result.csv'
+  name: 'wip_wop'
+  base_dir: '{home.dir}//data'
+  train_path: '{data.base_dir}//{data.name}//train.char.bmes'
+  valid_path: '{data.base_dir}//{data.name}//test.char.bmes'
+  test_path: '{data.base_dir}//{data.name}//dev.char.bmes'
 
-  vocab_path: '{pretrained_models.dir}/vocab.txt'
+  vocab_path: '{pretrained_models.dir}//vocab.txt'
 
   max_len: 150
 
@@ -40,7 +38,7 @@ data:
 
   num_vocab: 20000
   num_tag: 8
-  batch_size: 64
+  batch_size: 4
   batch_first: True
 
   train_shuffle: True
@@ -49,7 +47,7 @@ data:
 
 # specified for specific module
 model:
-  name: 'qirui_ner'
+  name: 'linear_softmax'
   dim_embedding: 300
   dim_hidden: 768
   num_layer: 1
